force-app/main/default/objects/BusinessTravelers__c/BusinessTravelers__c.object-meta.xml
<CustomObject>
    <label>Business Traveller</label>
    <nameField>
        <displayFormat>BTID-{000000}</displayFormat>
        <label>Business Traveler ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Travelers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>