force-app/main/default/objects/BusinessTravelers__c/fields/ActualEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActualEndDate__c</fullName>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>