force-app/main/default/objects/BusinessTravelers__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>If (OR (AND ( Ispickval(BusinessTravelRequest__r.ApprovalStatus__c , &apos;Manager Approved&apos;),  BusinessTravelRequest__r.ManagerApproved__c ), Ispickval(BusinessTravelRequest__r.ApprovalStatus__c , &apos;BOD Approved&apos;)), 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>