force-app/main/default/objects/BusinessTravelers__c/fields/BusinessReportLink__c.field-meta.xml
<CustomField>
    <fullName>BusinessReportLink__c</fullName>
    <label>Business Report Link</label>
    <type>Url</type>
</CustomField>