force-app/main/default/objects/BusinessTravelers__c/fields/BusinessTravelRequest__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelRequest__c</fullName>
    <label>Business Travel Request</label>
    <referenceTo>BusinessTravelRequest__c</referenceTo>
    <relationshipName>Business_Travelers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>