force-app/main/default/objects/BusinessTravelers__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Business_Travelers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>