force-app/main/default/objects/BusinessTravelers__c/fields/EmployeeNameFlow__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNameFlow__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(Id),  EmployeeName__r.Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>