force-app/main/default/objects/BusinessTravelers__c/fields/Rejected_By_HR__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By_HR__c</fullName>
    <formula>If ( Text(BusinessTravelRequest__r.Rejected_By__c) = &apos;HR&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected By HR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>