force-app/main/default/objects/BusinessTravelers__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>