force-app/main/default/objects/BusinessTravelers__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <formula>Text(BusinessTravelRequest__r.ApprovalStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>