force-app/main/default/objects/BusinessTravelers__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>