force-app/main/default/objects/BusinessTravelers__c/fields/SelfEvaluation__c.field-meta.xml
<CustomField>
    <fullName>SelfEvaluation__c</fullName>
    <label>Self Evaluation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>