force-app/main/default/objects/BusinessTravelers__c/fields/SupervisorEvaluation__c.field-meta.xml
<CustomField>
    <fullName>SupervisorEvaluation__c</fullName>
    <label>Supervisor Evaluation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>