force-app/main/default/objects/BusinessTravelers__c/fields/TotalActualExpense__c.field-meta.xml
<CustomField>
    <fullName>TotalActualExpense__c</fullName>
    <label>Total Actual Expense</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>