force-app/main/default/objects/BusinessTravelers__c/fields/TotalEstimateExpense__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimateExpense__c</fullName>
    <label>Total Estimate Expense</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>