force-app/main/default/objects/BusinessTravelers__c/validationRules/Block_when_Approval_start.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_when_Approval_start</fullName>
    <active>true</active>
    <errorConditionFormula>AND( BusinessTravelRequest__r.IsBlock__c , 
OR (ischanged( ActualStartDate__c ),
ischanged(  ActualEndDate__c  ),
ischanged ( TotalEstimateExpense__c )))</errorConditionFormula>
    <errorMessage>Cannot adjust Start Date, End Date, Estimate Cost when the Business Travel Request is in Approval Process!</errorMessage>
</ValidationRule>