force-app/main/default/objects/BusinessTravelers__c/validationRules/Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ActualStartDate__c &gt;  ActualEndDate__c</errorConditionFormula>
    <errorMessage>Start Date cannot be higher than End Date!</errorMessage>
</ValidationRule>