force-app/main/default/objects/BusinessTravelers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmployeeName__c</columns>
    <columns>BusinessTravelRequest__c</columns>
    <columns>ActualStartDate__c</columns>
    <columns>ActualEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>